--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Mainsquare</a>
+            <a class="navbar-brand" href="#">Ville historique</a>
+            <a class="navbar-brand" href="#">Les Services</a>
+            <a class="navbar-brand" href="#">Les Quartiers</a>
+            <a class="navbar-brand" href="#">Club de foot</a>
           </div>
         </nav>
       </div>
