--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Mainsquare</a>
             <a class="navbar-brand" href="#">Ville historique</a>
-            <a class="navbar-brand" href="#">Les Services</a>
+            <a class="navbar-brand" href="les-services.html">Les Services</a>
             <a class="navbar-brand" href="#">Les Quartiers</a>
             <a class="navbar-brand" href="#">Club de foot</a>
           </div>
