debut ville historique + lien sur la page index (c'est antoine)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Mainsquare</a>
-            <a class="navbar-brand" href="#">Ville historique</a>
+            <a class="navbar-brand" href="ville-historique.html">Ville historique</a>
             <a class="navbar-brand" href="les-services.html">Les Services</a>
             <a class="navbar-brand" href="#">Les Quartiers</a>
             <a class="navbar-brand" href="#">Club de foot</a>
