--- a/les-services.html
+++ b/les-services.html
@@ -1,13 +1,131 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://bootswatch.com/5/slate/bootstrap.min.css" rel="stylesheet" >
-  </head>
-  <body>
-    <h1>Les Services</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://bootswatch.com/5/slate/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <br>
+        <br>
+        <h1 class="card">Les Services</h1>
+
+        <div class="card bg-white text-black">
+            <div class="container">
+                <p>
+                    Les Services que proposent Arras sont cools
+                    Yy a genre des bus et des trains et tout
+                </p>
+
+                <h2>Eaux et Déchets</h2>
+
+                <p>
+                    Dès 1995, la communauté urbaine d'Arras s'est engagée en faveur de la protection de l'environnement,
+                    par une « charte d’écologie urbaine et rurale », une première régionale92. Un plan climat
+                    territorial a été lancé en 2010 à l'échelle du Pays. Un espace info énergie a été ouvert à cette
+                    date à Arras93.
+
+                    La ville s'est engagée dans la gestion différenciée de ses espaces : ses techniciens pratiquent
+                    moins de fauches, l'eau de pluie de ses serres est récupérée94…
+
+                    Des jardins biologiques destinés aux publics scolaires ont été mis en place depuis 1998, afin de
+                    sensibiliser les enfants au jardinage95. La ville compte également quatre sites consacrés aux
+                    jardins familiaux, sur une surface totale de 5 ha96.
+
+                    La gestion des déchets est faite par la communauté urbaine. Plusieurs déchèteries existent sur son
+                    territoire. Une plate-forme de compostage a été mise en place pour le traitement des déchets verts
+                    de la ville94.
+
+                    Depuis 2016, le service de navettes urbaines gratuites mis en place depuis le 6 novembre 2013
+                    baptisé Ma Citadine repose sur une flotte de véhicules 100 % électriques d'une capacité de huit
+                    passagers. Depuis le 16 septembre 2016, l'espace intra-boulevards est limité à 30 km/h pour les
+                    usagers afin d'encourager les déplacements doux (marche, vélo). La priorité aux déplacements doux
+                    est également soulignée par la mise en place progressive d'un accès exclusif aux piétons de la place
+                    des Héros, devant l'Hôtel de ville.
+                </p>
+
+                <h2>
+                    Espaces publics
+                </h2>
+
+                <p>La ville a conservé des espaces de respiration (espaces verts, jardins publics) dans ce tissu urbain.
+
+                </p>
+
+                <h4>Grands espaces verts</h4>
+                <p>Au total, au sein du périmètre communal, 91 ha sont en surfaces naturelles, 111 ha en surfaces
+                    agricoles97.
+
+                    Les Grandes Prairies sont composées de 23 ha arborés, le long de la Scarpe98. Le jardin du
+                    gouverneur, de plus de 6 ha, est à proximité des anciens remparts ; une partie en est encore
+                    visible. L'espace vert des Hautes-Fontaines et les fossés de la Citadelle constituent 23 ha
+                    d'espaces aujourd'hui enherbés.
+                </p>
+
+                <h4>Jardins et squares</h4>
+                <p>
+                    Le jardin de la préfecture s'étend sur 4 ha99. Le jardin Minelle, de 2 ha, s'organise autour d'un
+                    plan d'eau100. Le Rietz Saint-Sauveur, qui est le plus vieux jardin public de la ville, remontant au
+                    xive siècle, constitue une transition de 2 ha entre le centre-ville et la cité universitaire100. Les
+                    squares Saint-Nicolas et Jeanne-d'Arc se situent de part et d'autre de la cathédrale100. Le jardin
+                    de la Légion-d'honneur occupe 1,2 ha, entre la cathédrale et l'abbaye Saint-Vaast100.
+                </p>
+                <h4>Distinctions et labels</h4>
+                <p>
+                    Arras bénéficie du label « ville fleurie » avec quatre fleurs attribuées depuis 2004 par le Conseil
+                    national des villes et villages fleuris de France au concours des villes et villages fleuris101 ;
+                    elle compte plus de 5 000 arbres94. Ses serres municipales (tunnel et pépinière) produisent
+                    annuellement 200 000 plantes à massif diverses95.
+                </p>
+                <h2>Enseignement</h2>
+                <p>Arras est située dans l'académie de Lille.</p>
+                <h4>Établissements scolaires</h4>
+                <p>La ville administre onze écoles maternelles et onze écoles élémentaires communales102.
+
+                    Le département gère six collèges103 et la région sept lycées104.
+
+                    Les Arrageois disposent également d'établissements privés : six écoles105, deux collèges106 et un
+                    lycée.
+
+                    Parmi les établissements privés, on peut citer l'ancien pensionnat Jeanne-d'Arc, 12 rue
+                    Émile-Legrelle. Il était situé dans l'hôtel de la Basecque, érigé à la demande
+                    d'Albert-Marie-Josephe Imbert, comte de la Basecque, au xviiie siècle. Déclaré bien national sous la
+                    Révolution, il est racheté par le fils Imbert puis loué afin de loger l'évêque Hugues de La Tour
+                    d'Auvergne-Lauraguais. En 1825, l'hôtel particulier est acquis par la famille Le Caron de
+                    Canettemont, qui y vit jusqu'en 1901. Deux banques s'y installent par la suite. En 1973, la Société
+                    immobilière artésienne rachète l'édifice, dont les façades et les toitures font l'objet d'un arrêté
+                    de protection patrimonial en 1976. Il est en effet classé au titre des Monuments historiques. Le
+                    bâtiment est quasiment d'origine, hormis le portail, changé dans l'entre-deux-guerres. Le pensionnat
+                    Jeanne-d'Arc occupe les lieux pendant plusieurs décennies, fermant en 2006107.</p>
+                <h4>Vie universitaire</h4>
+                <p>Arras est le siège de l’université d'Artois, université multipolaire qui comprend les pôles de Lens,
+                    Liévin, Béthune, Douai et Arras. Créée en 1992, elle compte en avril 2011 4 600 étudiants à
+                    Arras108. Le pôle d’Arras « littéraire » est destiné aux lettres, langues, sciences humaines
+                    (histoire-géographie notamment) et depuis la rentrée 2006, aux sciences économiques.
+
+                    Arras accueille aussi une ESPE pour la formation des enseignants du primaire et du secondaire, une
+                    école supérieure des métiers d'art (Esmaa), l'École privée des sciences informatiques (EPSI), le
+                    Centre des études supérieures industrielles (CESI), l'institut régional de Travail Social site
+                    d'Artois ainsi que l'école d'infirmière IFSI.
+
+                    Arras est réellement devenue une cité universitaire comme en témoignent les nouvelles résidences
+                    universitaires, notamment la première résidence étudiante réhabilitée dans une ancienne caserne
+                    d'Arras, inaugurée en août 2009109. Elle comporte aussi un service de formation, le Sépia, qui
+                    permet d’obtenir un diplôme d’accès aux études universitaires ainsi qu’une validation d’acquis par
+                    expérience110.
+
+                    La communauté urbaine d’Arras gère l'École supérieure des métiers d'art d'Arras dont l’excellence
+                    est reconnue pour l’enseignement du vitrail110.
+
+                    Les Compagnons du tour de France installent également leur université à Arras en 2017, destinée à
+                    l'enseignement technique d'excellence en architecture.</p>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
