--- a/ville-historique.html
+++ b/ville-historique.html
@@ -11,5 +11,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <p class="fs-2">Arras est une ville très joli, très historique comme vous pouvez le constater <ci-dessous></ci-dessous></p>
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvoyagerenphotos.com%2Fwp-content%2Fuploads%2F2020%2F05%2Fplace-des-heros-arras.jpg&f=1&nofb=1&ipt=e0e2d470f30d46c96ee8eb225283dfa94a3ec2e52f795bad753dbc094ced3879&ipo=images" class="img-fluid" alt="...">
-  </body>
+    <p class="lh-sm">Les matériaux traditionnels, à la suite de l'édit de Philippe II, sont la pierre et la brique. Comme la craie est perméable, on utilise du grès en soubassement, pour éviter les infiltrations humides.
+
+        Plusieurs styles architecturaux se côtoient dans la ville.
+        
+        Avant la Première Guerre mondiale, l'architecture correspond à des tendances nationales voire internationales. Le beffroi, commencé en 1501, est gothique flamboyant. Arras n'a été française que tardivement, le rattachement à la France n’est définitif et ratifié qu’en 1659 par le traité des Pyrénées. L'architecture flamande a fortement influencé les constructions de la ville, par l'art d'assembler la brique et la pierre, et par ses façades avec pignon à gradins et surtout pignon à volutes. Sur les places, on construisait pignon sur rue afin que plus de marchands puissent donner sur l'espace public. Le premier bâtiment pleinement d'architecture classique conservé dans la ville date de 1701. Arras rattachée à la France, l'influence française s'affirme. Ce style sobre se retrouve dans les hôtels particuliers, rassemblés à proximité des lieux de pouvoir.
+        
+        Après guerre, de nouveaux matériaux et techniques apparaissent, les styles se diversifient. L'architecture Art déco est présente à Arras après guerre, comme dans d'autres villes de la région (piscines…). Il existe également quelques références d'architectures balnéaires. On trouve des exemples d'architecture industrielle (toiture en sheds). Dans la deuxième moitié du XXe siècle, des équipements publics d'architecture fonctionnaliste sont construits, dans un souci de salubrité et de confort : immeubles, lycée Gambetta… Enfin, le début du XXIe siècle voit le développement de rénovations urbaines, avec l'amélioration de l'isolation des bâtiments existants. </p>
+</body>
 </html>
