--- a/les-services.html
+++ b/les-services.html
@@ -12,6 +12,18 @@
     <div class="container">
         <br>
         <br>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Mainsquare</a>
+                    <a class="navbar-brand" href="ville-historique.html">Ville historique</a>
+                    <a class="navbar-brand" href="les-services.html">Les Services</a>
+                    <a class="navbar-brand" href="#">Les Quartiers</a>
+                    <a class="navbar-brand" href="#">Club de foot</a>
+                    <a class="navbar-brand" href="index.html">Home</a>
+                </div>
+            </nav>
+        </div>
         <h1 class="card">Les Services</h1>
 
         <div class="card bg-white text-black">
