--- a/ville-historique.html
+++ b/ville-historique.html
@@ -7,6 +7,18 @@
     <link href="https://bootswatch.com/5/slate/bootstrap.min.css" rel="stylesheet" >
   </head>
   <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#">Mainsquare</a>
+              <a class="navbar-brand" href="ville-historique.html">Ville historique</a>
+              <a class="navbar-brand" href="les-services.html">Les Services</a>
+              <a class="navbar-brand" href="#">Les Quartiers</a>
+              <a class="navbar-brand" href="#">Club de foot</a>
+              <a class="navbar-brand" href="index.html">Home</a>
+          </div>
+      </nav>
+  </div>
     <h1>Arras : une ville historique</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <p class="fs-2">Arras est une ville très joli, très historique comme vous pouvez le constater <ci-dessous></ci-dessous></p>
