--- a/ville-historique.html
+++ b/ville-historique.html
@@ -19,6 +19,7 @@
           </div>
       </nav>
   </div>
+    <div class="container">
     <h1>Arras : une ville historique</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <h2>Arras est une ville très joli, très historique comme vous pouvez le constater ci-dessous </h3>
