--- a/quartiers.html
+++ b/quartiers.html
@@ -7,7 +7,26 @@
     <link href="https://bootswatch.com/5/slate/bootstrap.min.css", rel="stylesheet">
   </head>
   <body>
-    <h1>Les quartiers d'Arras</h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+              <a class="navbar-brand text-light" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" href="/SiteArras/SiteArrasA4/index.html" >Accueil</a>
+                  </li>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2 text-light" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+        </nav>
+    <h1 style="align : center">Les quartiers d'Arras</h1>
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
