j'ai ajouté des card pour que ca soit un peu + stylé

--- a/ville-historique.html
+++ b/ville-historique.html
@@ -25,6 +25,7 @@
     <h2>Arras est une ville très joli, très historique comme vous pouvez le constater ci-dessous </h3>
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvoyagerenphotos.com%2Fwp-content%2Fuploads%2F2020%2F05%2Fplace-des-heros-arras.jpg&f=1&nofb=1&ipt=e0e2d470f30d46c96ee8eb225283dfa94a3ec2e52f795bad753dbc094ced3879&ipo=images" class="img-fluid" alt="...">
     <h3>Arras des matériaux historiques :</h3>
+    <div class="card bg-white text-black">
     <p class="lh-sm">Les matériaux traditionnels, à la suite de l'édit de Philippe II, sont la pierre et la brique. Comme la craie est perméable, on utilise du grès en soubassement, pour éviter les infiltrations humides.
 
         Plusieurs styles architecturaux se côtoient dans la ville.
@@ -32,7 +33,9 @@
         Avant la Première Guerre mondiale, l'architecture correspond à des tendances nationales voire internationales. Le beffroi, commencé en 1501, est gothique flamboyant. Arras n'a été française que tardivement, le rattachement à la France n’est définitif et ratifié qu’en 1659 par le traité des Pyrénées. L'architecture flamande a fortement influencé les constructions de la ville, par l'art d'assembler la brique et la pierre, et par ses façades avec pignon à gradins et surtout pignon à volutes. Sur les places, on construisait pignon sur rue afin que plus de marchands puissent donner sur l'espace public. Le premier bâtiment pleinement d'architecture classique conservé dans la ville date de 1701. Arras rattachée à la France, l'influence française s'affirme. Ce style sobre se retrouve dans les hôtels particuliers, rassemblés à proximité des lieux de pouvoir.
         
         Après guerre, de nouveaux matériaux et techniques apparaissent, les styles se diversifient. L'architecture Art déco est présente à Arras après guerre, comme dans d'autres villes de la région (piscines…). Il existe également quelques références d'architectures balnéaires. On trouve des exemples d'architecture industrielle (toiture en sheds). Dans la deuxième moitié du XXe siècle, des équipements publics d'architecture fonctionnaliste sont construits, dans un souci de salubrité et de confort : immeubles, lycée Gambetta… Enfin, le début du XXIe siècle voit le développement de rénovations urbaines, avec l'amélioration de l'isolation des bâtiments existants. </p>
-    <h3>Arras : une ville au coeur de la première guerre mondiale</h3>
+    </div>
+    <h3>Arras : une ville au coeur de la première guerre mondiale</h3>7
+    <div class="card bg-white text-black">
     <p class="lh-sm">La Première Guerre mondiale inflige des destructions considérables au patrimoine arrageois car la ville était située à moins de 10 km du front, et elle était l’enjeu des coûteuses batailles d’Artois.
 
         L'état-major de la 3e brigade d'infanterie se trouve à Arras lorsqu'est décidée la mobilisation générale le 1er août 1914. L'état-major commandé par le général Duplessis comprend un capitaine, un lieutenant et dix hommes. Le 5 août 1914, il part d'Arras vers Hirson, via Valenciennes et Avesnes-sur-Helpe. Il va combattre à l'est67.
@@ -44,6 +47,7 @@
         En secret, les Britanniques transforment les carrières de craie sous la ville pour qu'elles puissent accueillir les 24 000 soldats nécessaires au bon déroulement de la bataille d'Arras du 9 avril 1917. Le site de la Carrière Wellington rappelle aujourd'hui cette série de faits qui font d'Arras l'un des deux théâtres majeurs de l'Offensive Nivelle.
         
         Après la guerre, la ville, ravagée aux trois quarts69, a été décorée de la Croix de guerre 1914-1918 le 30 août 191970. Elle est reconstruite presque à l’identique, et en profite pour s’étendre. Dans les arrondissements d'Arras et Béthune, 150 000 ha de terres sont stérilisés. </p>
+    </div>
     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Bundesarchiv_Bild_146-1975-006-20%2C_Frankreich%2C_Schlachtfeld.jpg" class="img-fluid" alt="...">
     </div>
     </body>
