--- a/mainsquare.html
+++ b/mainsquare.html
@@ -8,52 +8,47 @@
   </head>
   <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand text-light" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-light" aria-current="page" href="#">Accueil</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link text-light" href="/SiteArras/SiteArrasA4/mainsquare.html">Mainsquare</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled text-light">Ville Historique</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled text-light">Les services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled text-light">Les quartiers</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
             </div>
         </nav>
-        <h1 style="align : center">Le MainSquare</h1>
+        <h1 class="text-center m-5">Le MainSquare</h1>
         <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t39.30808-6/317316325_10158800969725918_9210049214727536296_n.jpg?stp=dst-jpg_s960x960&_nc_cat=110&ccb=1-7&_nc_sid=e3f864&_nc_ohc=7Gg0cvtO528AX8CIepR&_nc_ht=scontent-cdt1-1.xx&oh=00_AfA971zULJ-UDjiAXEM1aWtzkGgzU8Typ3IZ5Xb9iYC9uQ&oe=63A00A81" class="img-fluid" alt="Le MainSquare">
 
-        <h2>Quand ?</h2>
+        <h2 class="m-5">Quand ?</h2>
         <p>Le MainSquare se déroulera du jeudi 29 juin 2023 au dimanche 2 juillet 2023.</p>
 
-        <h2>Où ?</h2>
+        <h2 class="m-5">Où ?</h2>
         <p>A la citadelle Vauban </p>
 
-        <h2>Zoom sur les artistes</h2>
+        <h2 class="m-5">Zoom sur les artistes</h2>
         <div class="row row-cols-1 row-cols-md-5 g-3">
             <div class="col">
             <div class="card">
