--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a class="navbar-brand" href="#">Mainsquare</a>
                 <a class="navbar-brand" href="ville-historique.html">Ville historique</a>
                 <a class="navbar-brand" href="les-services.html">Les Services</a>
-                <a class="navbar-brand" href="#">Les Quartiers</a>
+                <a class="navbar-brand" href="quartiers.html">Les Quartiers</a>
                 <a class="navbar-brand" href="#">Club de foot</a>
                 <a class="navbar-brand" href="index.html">Home</a>
             </div>
