--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Mainsquare</a>
+                <a class="navbar-brand" href="mainsquare.html">Mainsquare</a>
                 <a class="navbar-brand" href="ville-historique.html">Ville historique</a>
                 <a class="navbar-brand" href="les-services.html">Les Services</a>
                 <a class="navbar-brand" href="quartiers.html">Les Quartiers</a>
