--- a/ville-historique.html
+++ b/ville-historique.html
@@ -10,10 +10,10 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-              <a class="navbar-brand" href="#">Mainsquare</a>
+              <a class="navbar-brand" href="mainsquare.html">Mainsquare</a>
               <a class="navbar-brand" href="ville-historique.html">Ville historique</a>
               <a class="navbar-brand" href="les-services.html">Les Services</a>
-              <a class="navbar-brand" href="#">Les Quartiers</a>
+              <a class="navbar-brand" href="quartiers.html">Les Quartiers</a>
               <a class="navbar-brand" href="#">Club de foot</a>
               <a class="navbar-brand" href="index.html">Home</a>
           </div>
